# Vertebra-Demo

./: .gitignore  CMakeLists.txt  CMakePresets.json
App/: motor_test.cpp
Components/: CMakeLists.txt  motor.hpp  vertebra_dev.hpp
Components/Bridge/: can_msg_manager.cpp  can_msg_manager.hpp  can_port.cpp  can_port.hpp  can_receiver.cpp  can_receiver.hpp  can_sender.cpp  can_sender.hpp
Components/Motors/: motor_m3508.cpp  motor_m3508.hpp
Mx/: Demo.ioc
Vertebra/: CMakeLists.txt  components.cpp  components.hpp  defs.hpp
Vertebra/bridge/: vtb_bridge.cpp
Vertebra/connection/: can_port.cpp  can_port.hpp  can_receiver.cpp  can_receiver.hpp  can_sender.cpp  can_sender.hpp
Vertebra/design/: singleton.hpp
Vertebra/motors/: motor_m3508.cpp  motor_m3508.hpp
Vertebra/task/: cycle_task.cpp  cycle_task.hpp  vtb_task.cpp  vtb_task.hpp
Vertebra/vertebra/: __no_intell_error.cpp  components.cpp  components.hpp  defs.hpp  error.cpp  error.hpp
Vertebra/vertebra/algorithm/: instructor.hpp  pid.cpp  pid.hpp
Vertebra/vertebra/bridge/: vtb_bridge.cpp  vtb_bridge.h
Vertebra/vertebra/connection/: callback.cpp  callback.hpp  can.hpp  can_port.cpp  can_port.hpp  can_receiver.cpp  can_receiver.hpp  can_sender.cpp  can_sender.hpp  uart.hpp  uart_port.cpp  uart_port.hpp  uart_receiver.cpp  uart_receiver.hpp  uart_sender.cpp  uart_sender.hpp
Vertebra/vertebra/control/: pid_controller.hpp
Vertebra/vertebra/design/: loon.cpp  loon.hpp  singleton.hpp
Vertebra/vertebra/device/motor/: motor.hpp  motor_m3508.hpp
Vertebra/vertebra/math/: function.hpp  vecn.hpp
Vertebra/vertebra/motors/: motor_m3508.cpp  motor_m3508.hpp
Vertebra/vertebra/task/: cycle_task.hpp  vtb_task.cpp  vtb_task.hpp
Vertebra/vertebra/tool/: serial_plot.hpp  switch_buffer.hpp  variant_buffer.hpp
